--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "dependencies": {},
   "devDependencies": {
     "browser-sync": "^2.11.0",
-    "gulp": "^3.9.0"
+    "gulp": "^3.9.0",
+    "hogan": "^1.0.2",
+    "moment": "^2.11.1"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
